<resources>
    <string name="app_name">Notes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Courses notes</string>
    <string name="nav_header_subtitle">mohamedhussin07@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Courses</string>
    <string name="menu_gallery">Notes</string>
    <string name="menu_slideshow">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="note_name">Note name</string>
    <string name="note_description">Note description</string>
    <string name="mohamed_gamal_hussin">Mohamed Gamal Hussin</string>
    <string name="copyrights_2020">copyrights@2020</string>
    <string name="developed_by">Developed By:</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="course_name">Course name</string>
    <string name="course_description">Course description</string>
    <string name="about_us">about us</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
</resources>